# C_programs

./: .gitignore  2d_Array.c  Bit_shift_example.c  C_Tutorials_copy.c  CharactertoString.c  DerivedClassInC.c  Friends_In_C.c  Main.c  StorageClass.c  bit_extraction.c  bitwise_op.c  diag.txt  initializer_list_in_c.c  isnan_function.c  memset_example.h  pointer_exercise.c  sample.c  scan.c  setbit.c  setting_bit_example.c  strings_programs.c  structures_program.c  tempCodeRunnerFile.c  trial.c
C++_Programs/: Addition.cpp  Class_object.cpp  Error_window.cpp  FormatFlags.cpp  Friends.cpp  Initializer_List.cpp  Isnan_func.cpp  MenberFunc.cpp  New_Delete.cpp  Setw_example.cpp  SimpleMemberFunction.cpp  reinterpret_cast.cpp  tempCodeRunnerFile.cpp
CMake_tutorial/: README.md
C_Programs/: 2d_Array  AdvaceStructure.c  BesteString.c  Bit_shift_example.c  C_Tutorials.c  Calloc_implementation.c  Check_Preceedance.c  Endianess.c  Friends_In_C.c  Function_in_structure.c  Global_Var.c  Static_variable.c  StreamsInC.c  a.out  additon  bit_find_odd_even  bit_find_odd_even.c  constructor_example.c  convertion.c  double.c  initializer_list_in_c.c  linkedList.c  malloc_fun.c  memset_example.h.gch  new 1.c  new1  new1.c  pointer_exercise.c  scan  sortingInC.c  strings_programs  strings_programs.c  testing_getchar.c  trial.c  union_uplow.c
C_Programs/Addition_Program/: Diff_add_method.c
C_Programs/Circular_buffer/: Circular_buffer.c
C_Programs/Convertion/: Convert_To_other.c  beste.c
C_Programs/Examples/: print_binary.c
C_Programs/Find_output_of_code/: Find_Output_of_code1.c
C_Programs/Function_pointer/: Dynamic_behavior.c
C_Programs/Reentrant/: ReadMe.md  pointer.c  tempCodeRunnerFile.c
C_Programs/Socket_programing/: Client  Server.c  tempCodeRunnerFile.c
C_Programs/Src/: Array.c  BInary_Convertion  BInary_Convertion.c  Calculator  Calculator.c  Calculator_C++.cpp  Callbach_func  Callbach_func.c  Money_cal.c  RecursionFunctionExample.c  StorageClasess  bitOperation.c  doublyLinkedList.c  first.c  mian  rec  shiptProgram.c
C_Programs/structures/: Array_of_structures_example.c  FunctionInStruct.c  Structure_Sort_Per.c  VirtualInC.c  structures_program.c  structures_program_2.c  tempCodeRunnerFile.c
CallBack-Function/: callback_function.c
Convertion/: convertion_Bin.c  convertion_Hexa.c  convertion_Octal.c  tempCodeRunnerFile.c
Documents/: String_cat.txt
Examples/: coversion.c  print_binary.h
Examples/Trial/: Binary.c
FromBooks/Learn_programing_with_C-Book-/: Printf  Printf.c  StringExample  StringExample.c  TheAssignmentStatement
FromHackerRank/: 1D_array.c  Boxes.c  Digit_frequency.c  Function_overload.c  Loops.c  Sum_Using_pointers.txt  gid.txt  malloc_function.c  strings.c
FromHackerRank/CPP_Programs/: Arrays.cpp  HackerRank.cpp  String_split.cpp  This_Example.cpp  pointers_cpp.cpp
Incl/: header  header.h
Notepad_Notes/: Advantages_Function_pointers.md  Ananlog_Communication.md  Computer_Organization.md  Copy of Embedded_C_Tutorials.xlsx  Digital_Electronics.md  Dll_Main_CodeBlocks.txt  Dll_main_codeBlock.txt  Electronics_Measurement.md  IGMP.md  Internet_Technology.md  Network_managemnet.md  Operating_system.md  Power_Electronics.md  QSPI_flash.md  SETW_In_Cpp.md  Script.txt  Structures.md  TimeSheet_AMIT KORGAONKAR_16 July_15 August.xlsx  TimeSheet_AMIT KORGAONKAR_16 July_15 February(AutoRecovered).xlsx  VirtualFunctInC.md  new 10.txt  new 11.txt  new 14.txt  new 15.txt  new 16.txt  new 17.txt  new 18.txt  new 19.txt  new 20.txt  new 21.txt  new 22.txt  new 23.txt  new 24.txt  new 25.txt  new 26.txt  new 27.txt  new 28.txt  new 29.txt  new 3.txt  new 30.txt  (+27 more)
Notepad_Notes/Error_Notes/: Segmentation_fault.md
Notepad_Notes/OneNote Notebooks/: My Notebook.url  Quick Notes.one
Reentrant/: Matrix.c  Non_reentrant_example.c  Reentrant_example.c  String_example.c
Socket_programing/: Client.c  Server
Src/: Calculator_C++  Login_c  Login_c.c  Money_cal  RecursionFunctionExample  StingInSring  StingInSring.c  StorageClasess.c  Switch_Case_BO_BI.c  a.out  beste.c  define_example.c  endianess.c  header  mian.c  tempCodeRunnerFile.c
Src/From_hackerRAnk/: Arithmetic.c
TFCMcomm/: CMakeLists.txt
TFCMcomm/Common/: compiler.cmake
TFCMcomm/TFCMcomm/: CMakeLists.txt  Release.cpp  TFCMcomm.cbp  TFCMcomm.depend  TFCMcomm.layout  main.cpp  main.h
TFCMcomm/TFCMcommApp/: CMakeLists.txt  TFCMcommApp.cbp  TFCMcommApp.depend  TFCMcommApp.layout
structures/: structures_program.c
(+89 files in other folders)
